@@ -104,7 +104,6 @@
   * BT_MECHDEST_TRIGGER
   * BT_EXILE_SKILLS
   * BT_EXILE_MW3STATS
-  * BT_EXTENDED_ADVANTAGES
   * BT_FREETECHTIME
   * BT_MOVEMENT_MODES
   * BT_CARRIERS
